// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar > should not render with pulse class when progress is greater than 0.1 1`] = `
<div>
  <div
    class="progressBar"
  >
    <div
      class="track safe"
      style="width: 66.67%; transition: width 0.1s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s ease;"
    />
  </div>
</div>
`;

exports[`ProgressBar > should render a ProgressBar with initial progress 1`] = `
<div>
  <div
    class="progressBar"
  >
    <div
      class="track caution"
      style="width: 48.33%; transition: width 0.1s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s ease;"
    />
  </div>
</div>
`;

exports[`ProgressBar > should render with 0 progress when countdown has expired 1`] = `
<div>
  <div
    class="progressBar"
  >
    <div
      class="track critical pulse"
      style="width: 0%; transition: width 0.1s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s ease;"
    />
  </div>
</div>
`;

exports[`ProgressBar > should render with 0 progress when dates are invalid 1`] = `
<div>
  <div
    class="progressBar"
  >
    <div
      class="track critical pulse"
      style="width: 0%; transition: width 0.1s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s ease;"
    />
  </div>
</div>
`;

exports[`ProgressBar > should render with full progress when countdown just started 1`] = `
<div>
  <div
    class="progressBar"
  >
    <div
      class="track safe"
      style="width: 100%; transition: width 0.1s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s ease;"
    />
  </div>
</div>
`;
